modules/observability/prometheus-operator/base/resources/workloads/kube-state-metrics/configs/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-state-metrics
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Egress
  egress:
  # Connect to the DNS service inside the kube-system namespace
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchExpressions:
        - key: k8s-app
          values:
          - kube-dns
          operator: In
  # Connect to the api-server (allow 443 and 6443 for compatibility to different distros)
  - ports:
    - port: 443
      protocol: TCP
    - port: 6443
      protocol: TCP
